feat: add pets slider

--- a/index.html
+++ b/index.html
@@ -65,6 +65,36 @@
             <section class="pets">
                 <div class="pets__container">
                     <div class="pets__heading"><h3>Our friends who<br> are looking for a house</h3></div>
+                    <div class="slider-wrap">
+                <!-- CAROUSEL -->
+                            <div class="animate" id="carousel">
+                                <div class="slide animate" style="background-color: pink">
+                                    <h1>SIMPLE</h1>
+                                  </div>
+                                  <div class="slide animate" style="background-color: green">
+                                    <h1>CAROUSEL</h1>
+                                  </div>
+                                    <div class="slide animate" style="background-color: purple">
+                                    <h1>SLIDER</h1>
+                                  </div>
+                                      <div class="slide animate" style="background-color: red">
+                                    <h1>FOR</h1>
+                                  </div>
+                                      <div class="slide animate" style="background-color: yellow">
+                                    <h1>CARDS</h1>
+                                  </div>
+                            </div>
+                <!-- BUTTOMS -->
+                            <div id="controls" class="controls">
+                                <div id="left" class="prev" onclick="left(this)">
+                                    <img src="/SHELTER/assets/images/arrow.png" alt="preview">
+                                </div>
+                                <span id="index" hidden></span>
+                                <div id="right" class="next" onclick="right(this)">
+                                    <img src="/SHELTER/assets/images/arrow.png" alt="next">
+                                </div>
+                            </div>
+                    </div>
                     <div class="pets__button">
                         <a href="#" class="pets__button__btn">Get to know the rest</a>
                     </div>
