feat: add pets card

--- a/index.html
+++ b/index.html
@@ -68,21 +68,51 @@
                     <div class="slider-wrap">
                 <!-- CAROUSEL -->
                             <div class="animate" id="carousel">
-                                <div class="slide animate" style="background-color: pink">
-                                    <h1>SIMPLE</h1>
-                                  </div>
-                                  <div class="slide animate" style="background-color: green">
-                                    <h1>CAROUSEL</h1>
-                                  </div>
-                                    <div class="slide animate" style="background-color: purple">
-                                    <h1>SLIDER</h1>
-                                  </div>
-                                      <div class="slide animate" style="background-color: red">
-                                    <h1>FOR</h1>
-                                  </div>
-                                      <div class="slide animate" style="background-color: yellow">
-                                    <h1>CARDS</h1>
-                                  </div>
+                                <div class="slide animate">
+                                    <div class="card">
+                                        <img src="../SHELTER/assets/images/pets-katrine.png" class="card_img" alt="Katrine">
+                                        <h3 class="card__title">Katrine</h3>
+                                        <div class="card__btn">
+                                            <h2 class="card__text">Learn more</h2>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="slide animate">
+                                    <div class="card">
+                                        <img src="../SHELTER/assets/images/pets-katrine.png" class="card_img" alt="Katrine">
+                                        <h3 class="card__title">Katrine</h3>
+                                        <div class="card__btn">
+                                            <h2 class="card__text">Learn more</h2>
+                                        </div>
+                                    </div>
+                                </div> 
+                                <div class="slide animate">
+                                    <div class="card">
+                                        <img src="../SHELTER/assets/images/pets-jennifer.png" class="card_img" alt="Jennifer">
+                                        <h3 class="card__title">Jennifer</h3>
+                                        <div class="card__btn">
+                                            <h2 class="card__text">Learn more</h2>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="slide animate">
+                                    <div class="card">
+                                        <img src="../SHELTER/assets/images/pets-woody.png" class="card_img" alt="Woody">
+                                        <h3 class="card__title">Woody</h3>
+                                        <div class="card__btn">
+                                            <h2 class="card__text">Learn more</h2>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="slide animate">
+                                    <div class="card">
+                                        <img src="../SHELTER/assets/images/pets-katrine.png" class="card_img" alt="Katrine">
+                                        <h3 class="card__title">Katrine</h3>
+                                        <div class="card__btn">
+                                            <h2 class="card__text">Learn more</h2>
+                                        </div>
+                                    </div>                                  
+                                </div>
                             </div>
                 <!-- BUTTOMS -->
                             <div id="controls" class="controls">
