feat: add pets card

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                             <div class="animate" id="carousel">
                                 <div class="slide animate">
                                     <div class="card">
-                                        <img src="../SHELTER/assets/images/pets-katrine.png" class="card_img" alt="Katrine">
-                                        <h3 class="card__title">Katrine</h3>
+                                        <img src="../SHELTER/assets/images/pets-woody.png" class="card_img" alt="Woody">
+                                        <h3 class="card__title">Woody</h3>
                                         <div class="card__btn">
                                             <h2 class="card__text">Learn more</h2>
                                         </div>
